--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@ img.emoji {
           <div class="col-sm-4">
             <div class="menu">
   <ul class="list-unstyled">
-    <li><a href="index.html">Утепление домов</a></li>
-    <li><a href="index.html@p=14851">Утепление стен</a></li>
-    <li><a href="index.html@p=14847">Утепление потолков</a></li>
+    <li><a href="/">Утепление домов</a></li>
+    <li><a href="/uteplenie-sten-v-melitopole">Утепление стен</a></li>
+    <li><a href="/uteplenie-potolkov-v-melitopole/">Утепление потолков</a></li>
   </ul>
 </div>          </div>
           <div class="col-sm-8">
@@ -401,9 +401,9 @@ img.emoji {
             <div class="col-sm-4">
               <div class="menu">
   <ul class="list-unstyled">
-    <li><a href="index.html">Утепление домов</a></li>
-    <li><a href="index.html@p=14851">Утепление стен</a></li>
-    <li><a href="index.html@p=14847">Утепление потолков</a></li>
+    <li><a href="/">Утепление домов</a></li>
+    <li><a href="/uteplenie-sten-v-melitopole">Утепление стен</a></li>
+    <li><a href="/uteplenie-potolkov-v-melitopole/">Утепление потолков</a></li>
   </ul>
 </div>            </div>
           </div>
